tests/fail/dize-dizey.kip
dize, doğrudur.
dizey, yanlıştır.

dizeyi yaz.
